--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,6 +8,8 @@
 
 html {
     font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-behavior:smooth;
 }
 
 body {
@@ -15,7 +17,9 @@ body {
     box-sizing: border-box;
     overflow-x: hidden;
 }
-
+h1, h2, h3, h4, h5, h6{
+    letter-spacing:1px;
+}
 //////////
 /// animations
 .slide-it-right{
