--- a/sass/layout/_flex-row.scss
+++ b/sass/layout/_flex-row.scss
@@ -20,4 +20,23 @@
     .col-6{
         flex-basis:calc(100%/6);  
     }
+    @include respond(phone){
+        flex-wrap:wrap;
+        .col-2{
+            flex-basis:100%;
+            
+        }
+        .col-3{
+            flex-basis:100%;
+        }
+        .col-4{
+            flex-basis:100%;
+        }
+        .col-5{
+            flex-basis:100%;
+        }
+        .col-6{
+            flex-basis:100%;
+        }
+    }
 }
