--- a/sass/layout/_find-us-section.scss
+++ b/sass/layout/_find-us-section.scss
@@ -1,8 +1,11 @@
 .find-us__section{
-    background-image:linear-gradient(to right, rgba($color-black,0.7),rgba($color-black,0.7)),url("/img/go-kart-international-skegness-rules.jpg");
+    background-image:linear-gradient(to right, rgba($color-black,0.7),rgba($color-black,0.7)),url("/img/go-kart-international-track.webp");
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    @include respond(tab-port){
+        background-image:linear-gradient(to right, rgba($color-black,0.7),rgba($color-black,0.7)),url("/img/go-kart-international-track-med.webp");
+    }
     &--wrapper{
         padding:15rem 3rem;
         text-align: center;
