--- a/sass/layout/_teams-section.scss
+++ b/sass/layout/_teams-section.scss
@@ -5,11 +5,10 @@
         flex-wrap: nowrap;
         width:100%;
         height:100%;
-        &:last-child{
-            // display:flex;
-            // justify-content: center;
-            // align-items: center;
+        @include respond(phone){
+            flex-wrap: wrap;
         }
+     
         
         .col-2{
             flex-grow:1;
